LENS-1008 : Support simple iterator over HTTPResultSet for lens clients